@@ -1,0 +1,29 @@
+/*
+$Header: /var/lib/cvsd/var/lib/cvsd/cspCalculator/src/html/styles/cspCalculator.css,v 1.1 2013-11-28 23:41:12 timb Exp $
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+
+(c) Tim Brown, 2013
+<mailto:timb@nth-dimension.org.uk>
+<http://www.nth-dimension.org.uk/> / <http://www.machine.org.uk/>
+*/
+
+div#cspCalculatorDiv {
+	height: 50px;
+	margin: 6px;
+	padding: 6px;
+	background-color: red;
+	overflow: hidden;
+}
